problem with overflow-hidden on carouselbox css fixed, but needs work

--- a/src/pages/mlcomponents/Carousel/carousel.component.scss
+++ b/src/pages/mlcomponents/Carousel/carousel.component.scss
@@ -27,7 +27,6 @@
       margin: 0.2em;
       border: 1px solid #ccc;
       box-shadow: 2px 2px 10px #ccc;
-      overflow: hidden;
     }
     .active {
         height: 480px;
